--- a/css/rpg.css
+++ b/css/rpg.css
@@ -105,3 +105,33 @@ header{
             .div3 { grid-area: 1 / 2 / 3 / 3; }
             .nivel2-03 { grid-area: 1 / 3 / 2 / 4; }
             .nivel2-puerta-a-3 { grid-area: 2 / 3 / 3 / 4; }
+            .niveles img {
+                width: 100%;
+            }
+        
+            .nivel2 p{
+                list-style: none;
+                font-size: 160%;
+            }
+            .nivel2 li{
+                list-style: none;
+                font-size: 158%;
+            }
+            .nivel2{
+                text-align: center;
+            }
+            .nivel2 img{
+                height: 100%;
+            }
+
+            .nivel4 {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr;
+            grid-column-gap: 0px;
+            grid-row-gap: 0px;
+            }
+
+            .nivel4_01 { grid-area: 1 / 1 / 2 / 2; }
+            .nivel4_parrafo { grid-area: 1 / 2 / 2 / 3; }
+            .nivel4_02 { grid-area: 1 / 3 / 2 / 4; }
