--- a/css/rpg.css
+++ b/css/rpg.css
@@ -87,7 +87,7 @@ header{
         }
         .ip1{
             text-align: center;
-            font-size: 170%;
+            font-size: 150%;
         }
         li{
             list-style: none;
@@ -147,3 +147,145 @@ header{
             .nivel4_01 { grid-area: 1 / 1 / 2 / 2; }
             .nivel4_parrafo { grid-area: 1 / 2 / 2 / 3; }
             .nivel4_02 { grid-area: 1 / 3 / 2 / 4; }
+
+            .nivel3 img{
+                width: 100%;
+            }
+            .nivel3{
+                text-align: center;
+                font-size: 120%;
+            }
+            .nivel4{
+                text-align: center;
+                font-size: 120%;
+            }
+            .niveles{
+                display: flex;
+                display: block;
+            }
+            .nivel5 {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: 1fr;
+                grid-column-gap: 0px;
+                grid-row-gap: 0px;
+                }
+                
+                .nivel5_01 { grid-area: 1 / 1 / 2 / 2; }
+                .nivel5_parrafo { grid-area: 1 / 2 / 2 / 3; }
+                .nivel5_02 { grid-area: 1 / 3 / 2 / 4; }
+
+                .nivel6 {
+                    display: grid;
+                    grid-template-columns: repeat(3, 1fr);
+                    grid-template-rows: 1fr;
+                    grid-column-gap: 0px;
+                    grid-row-gap: 0px;
+                    }
+             
+            .nivel6_01 { grid-area: 1 / 1 / 2 / 2; }
+            .nivel6_parrafo { grid-area: 1 / 2 / 2 / 3; }
+            .nivel6_02 { grid-area: 1 / 3 / 2 / 4; }
+
+            .nivel7 {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: 1fr;
+                grid-column-gap: 0px;
+                grid-row-gap: 0px;
+                }
+                        
+                .nivel7_01 { grid-area: 1 / 1 / 2 / 2; }
+                .nivel7_parrafo { grid-area: 1 / 2 / 2 / 3; }
+                .nivel7_02 { grid-area: 1 / 3 / 2 / 4; }
+
+                .nivel8 {
+                    display: grid;
+                    grid-template-columns: repeat(3, 1fr);
+                    grid-template-rows: 1fr;
+                    grid-column-gap: 0px;
+                    grid-row-gap: 0px;
+                    }
+                    
+                    .nivel8_01 { grid-area: 1 / 1 / 2 / 2; }
+                    .nivel8_parrafo { grid-area: 1 / 2 / 2 / 3; }
+                    .nivel8_02 { grid-area: 1 / 3 / 2 / 4; }
+                    
+                    .nivel9 {
+                        display: grid;
+                        grid-template-columns: repeat(3, 1fr);
+                        grid-template-rows: repeat(2, 1fr);
+                        grid-column-gap: 0px;
+                        grid-row-gap: 0px;
+                        }
+                        
+                        .nivel8_portal { grid-area: 1 / 1 / 2 / 2; }
+                        .n9pueblo { grid-area: 2 / 1 / 3 / 2; }
+                        .n9p { grid-area: 1 / 2 / 3 / 3; }
+                        .n9piramide { grid-area: 1 / 3 / 2 / 4; }
+                        .n9a { grid-area: 2 / 3 / 3 / 4; }
+
+                        .nivel10 {
+                            display: grid;
+                            grid-template-columns: repeat(3, 1fr);
+                            grid-template-rows: repeat(2, 1fr);
+                            grid-column-gap: 0px;
+                            grid-row-gap: 0px;
+                            }
+                            
+                            .n101 { grid-area: 1 / 1 / 2 / 2; }
+                            .n102 { grid-area: 2 / 1 / 3 / 2; }
+                            .n10p { grid-area: 1 / 2 / 3 / 3; }
+                            .n103 { grid-area: 1 / 3 / 2 / 4; }
+                            .n104 { grid-area: 2 / 3 / 3 / 4; }
+
+.nivel5{
+    text-align: center;
+    font-size: 120%;
+}
+.nivel5 li{
+    list-style: none;
+}
+.nivel6{
+    text-align: center;
+    font-size: 100%;
+}
+.nivel6 li{
+    list-style: none;
+}
+.nivel7{
+    text-align: center;
+    font-size: 120%;
+    background: linear-gradient(0deg, rgba(48,68,129,1) 0%, rgba(16,185,189,1) 35%, rgba(126,237,240,1) 100%);
+
+}
+.nivel7 li{
+    list-style: none;
+}
+.nivel8{
+    text-align: center;
+    font-size: 100%;
+    background: linear-gradient(0deg, rgba(118,200,6,1) 0%, rgba(16,189,45,1) 35%, rgba(48,68,129,1) 100%);
+}
+.nivel8 li{
+    list-style: none;
+}
+.nivel9{
+    text-align: center;
+    font-size: 120%;
+    background: linear-gradient(0deg, rgba(44,45,1,1) 0%, rgba(216,221,8,1) 35%, rgba(118,200,6,1) 100%);
+}
+.nivel9 li{
+    list-style: none;
+}
+.nivel10{
+    text-align: center;
+    font-size: 120%;
+    background: linear-gradient(0deg, rgba(1,126,3,1) 0%, rgba(1,77,2,1) 35%, rgba(44,45,1,1) 100%);
+}
+.nivel10 li{
+    list-style: none;
+}
+
+
+
