--- a/css/rpg.css
+++ b/css/rpg.css
@@ -286,6 +286,10 @@ header{
 .nivel10 li{
     list-style: none;
 }
-
-
+.nivel10:hover{
+    color: white;
+}
+.nivel6{
+    background: linear-gradient(0deg, rgba(126,237,240,1) 0%), rgba(149,101,3,1) 35%, rgba(134,85,16,1) 100%;
+    }
 
